@@ -5,7 +5,7 @@ tree = element tree { attlist.tree,
      | button)*
   }
 attlist.tree &= attribute on_write { text }?
-attlist.tree &= attribute editable { "top" | "bottom" }?
+attlist.tree &= attribute editable { "0" | "1" }?
 attlist.tree &= attribute sequence { text }?
 attlist.tree &=
   [ a:defaultValue = "0" ] attribute keyword_open { "0" | "1" }?
