@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree editable="top">
+<tree editable="1">
     <field name="resource" expand="2"/>
     <field name="name" expand="2"/>
     <field name="summary" expand="1"/>
